--- a/public/style.css
+++ b/public/style.css
@@ -161,7 +161,8 @@ body {
 }
 
 .registration-form,
-.pick-city, .edit-profile-form {
+.pick-city,
+.edit-profile-form {
     width: 40%;
     /* border: 2px solid rgb(192, 194, 186); */
     border-radius: 10px;
@@ -177,7 +178,7 @@ body {
 
 .registration-form h1,
 .pick-city h1,
-.edit-profile-form h1{
+.edit-profile-form h1 {
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
@@ -314,11 +315,11 @@ p {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-        background-image: url('header-img.jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center;
-        background-size: cover;
+    background-image: url('header-img.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
 .your-profile-main h1 {
@@ -377,8 +378,7 @@ p {
     -webkit-box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
     -moz-box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
     box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
-    z-index: 2
-
+    z-index: 2;
 }
 
 .profile-pic:hover {
@@ -413,8 +413,9 @@ p {
     padding: 2%;
     font-size: 20px;
 }
-.profile-table td, tr {
-padding: 5px;
+.profile-table td,
+tr {
+    padding: 5px;
 }
 
 .profile-table td {
@@ -425,14 +426,11 @@ padding: 5px;
 .table-label {
     color: black;
     font-weight: bold;
-
 }
 
 .edit-profile {
     margin-top: 5%;
 }
-
-
 
 .edit-profile-form {
     background: rgb(255, 255, 255);
@@ -455,13 +453,93 @@ padding: 5px;
     -webkit-box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
     -moz-box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
     box-shadow: 7px 10px 9px -6px rgba(71, 68, 71, 0.6);
-    background:rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 
 .starred-users h1 {
     font-family: 'Pinyon Script', cursive;
     margin: 0;
     padding: 0;
+}
+
+/* USER COMPONENT */
+
+.user-component {
+    width: 350px;
+    height: 430px;
+    border: 1px solid black;
+    position: relative;
+    color: black;
+    background: rgb(141, 148, 154);
+    border-radius: 10px;
+    margin: 1%;
+}
+
+.starred-flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.user-component-img {
+    width: 80%;
+    height: 250px;
+    top: 5%;
+    left: 10%;
+    position: absolute;
+
+    border-radius: 10px;
+}
+
+.user-component-name {
+    width: 70%;
+    height: 40px;
+    border: 1px solid black;
+    position: absolute;
+    top: 272px;
+    left: 15%;
+    padding-top: 4px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    -webkit-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    -moz-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    z-index: 2;
+    background: rgb(255, 255, 255);
+}
+
+.user-component-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    -webkit-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    -moz-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    z-index: 3;
+}
+
+.user-component-img img:hover {
+    cursor: pointer;
+}
+
+.user-component-languages {
+    width: 60%;
+    height: auto;
+    border: 1px solid black;
+    position: absolute;
+    top: 317px;
+    left: 17%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    -webkit-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    -moz-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    z-index: 1;
+    padding: 10px;
+    background: rgb(211, 151, 91);
 }
 
 @media only screen and (max-width: 700px) {
@@ -473,7 +551,8 @@ padding: 5px;
     }
 
     .registration-form,
-    .pick-city, .edit-profile-form {
+    .pick-city,
+    .edit-profile-form {
         width: 70%;
     }
 
@@ -487,7 +566,8 @@ padding: 5px;
     }
 
     .registration-form h1,
-    .pick-city h1, .edit-profile-form h1 {
+    .pick-city h1,
+    .edit-profile-form h1 {
         font-size: 25px;
     }
 
@@ -509,7 +589,6 @@ padding: 5px;
         text-align: center;
         margin: 0 auto;
         margin-top: 20px;
-
     }
 
     .edit-profile-form {
@@ -518,12 +597,12 @@ padding: 5px;
 }
 
 @media only screen and (max-width: 1220px) and (min-width: 701px) {
-        .profile-info {
-            width: 90%;
-            height: auto;
-            margin-left: 10%;
-            text-align: center;
-            margin: 0 auto;
-            margin-top: 20px;
-        }
+    .profile-info {
+        width: 90%;
+        height: auto;
+        margin-left: 10%;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
 }
