--- a/public/style.css
+++ b/public/style.css
@@ -309,7 +309,8 @@ p {
 
 /* LOGGED-IN PAGE */
 
-.your-profile-main {
+.your-profile-main,
+.other-user-profile-main {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -540,6 +541,10 @@ tr {
     z-index: 1;
     padding: 10px;
     background: rgb(211, 151, 91);
+}
+
+.other-user-profile-main {
+    background-image: url('city.jpg');
 }
 
 @media only screen and (max-width: 700px) {
