--- a/public/style.css
+++ b/public/style.css
@@ -327,7 +327,8 @@ p {
     color: rgb(229, 229, 229);
 }
 
-.your-profile-content {
+.your-profile-content,
+.other-user-profile-content {
     width: 70%;
     height: auto;
     text-align: center;
@@ -366,7 +367,8 @@ p {
     padding: 10px 50px;
 }
 
-.profile-pic {
+.profile-pic,
+.other-user-profile-pic {
     width: 250px;
     height: 250px;
     margin: 1%;
@@ -386,7 +388,8 @@ p {
     cursor: pointer;
 }
 
-.profile-pic img {
+.profile-pic img,
+.other-user-profile-pic img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -545,6 +548,43 @@ tr {
 
 .other-user-profile-main {
     background-image: url('city.jpg');
+}
+
+.other-user-profile-content {
+    background: rgb(142, 95, 101, 0.8);
+}
+
+/* MESSAGE AREA */
+
+.message-area {
+    width: 60%;
+    height: 400px;
+    /* border: 1px solid black; */
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 5%;
+    background-color: rgb(206, 206, 206);
+    border-radius: 10px;
+    -webkit-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    -moz-box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+    box-shadow: 7px 10px 9px -5px rgba(71, 68, 71, 0.68);
+}
+
+.h1-message {
+    padding: 10px;
+    font-size: 25px;
+    color: rgb(37, 24, 37);
+}
+
+.message-text-area {
+    width: 80%;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.message-send-button {
+    float: right;
+    margin-right: 10%;
 }
 
 @media only screen and (max-width: 700px) {
